--- a/code/style.css
+++ b/code/style.css
@@ -13,7 +13,7 @@
 
 /* global ------------------------------------------------- */
 :root{background:black;}
-body,html{ background-color: var(--dark); /*background: linear-gradient(rgb(255, 210, 215) 80px, var(--dark) 250px) ;*/ color:white; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif; scroll-behavior: smooth; margin:0; padding:0; font-size:15px; font-weight:400; line-height:170%;   }
+body,html{ background-color: var(--dark); /*background: linear-gradient(rgb(255, 210, 215) 80px, var(--dark) 250px) ;*/ color:white; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif; scroll-behavior: smooth; margin:0; padding:0; font-size:15px; font-weight:400;    }
 a{color:white; text-decoration:none; cursor:pointer; }
 a:hover {cursor:pointer !important;}
 /* input, select, textarea { -webkit-appearance: none; -moz-appearance: none; appearance: none; border:0; margin:0; font-family:'Roboto', Helvetica, Arial, sans-serif; padding:10px 15px; box-sizing: border-box; border-radius:10px; background:white; color: var(--dark); font-size:16px; } */
