--- a/code/style.css
+++ b/code/style.css
@@ -36,7 +36,7 @@ select {cursor:pointer;}
 
 @media screen and (max-width: 600px) { 
   body,html{ /* background: linear-gradient(rgb(255, 210, 215) 50px, var(--dark) 200px) ;*/ }
-  .titre {width:85%; font-size:30px; margin:40px auto 30px auto;  }
+  .titre {width:85%; font-size:30px; margin:50px auto 30px auto;  }
   }
 
 /* menu ----------------------------------------------------- */
@@ -51,7 +51,7 @@ select {cursor:pointer;}
 
 #sousmenumobile {display:none; position:fixed; background:var(--dark); top:0; left:0; z-index:3; text-align:left; width:100%; height:200vh; padding:40px 0; }
 /* #sousmenumobile::-webkit-scrollbar {display: none; } */
-#sousmenumobile div {margin:30px 30px; font-size:30px; font-weight:500;  line-height:125%; color:white; }
+#sousmenumobile div {margin:30px 30px; font-size:30px; font-weight:600;  line-height:125%; color:white; }
 #sousmenumobile #close {position:fixed; top:10px; right:20px; height:25px; }
 
 @media screen and (max-width: 600px) { 
@@ -195,7 +195,7 @@ select {cursor:pointer;}
 #faq .derouler .contenu {padding:0 20px 15px 20px;}
 
 @media screen and (max-width: 950px) { 
-#faq .derouler {width:100%; background:transparent; border-bottom:solid var(--grey) 1px; border-radius:0; margin:0; padding:10px 0; }
+#faq .derouler {width:100%; background:transparent; border-bottom:solid rgb(50,50,50) 1px; border-radius:0; margin:0; padding:10px 0; }
 
 }
 
