--- a/code/style.css
+++ b/code/style.css
@@ -22,7 +22,7 @@ select {cursor:pointer;}
 .btn{ background:var(--blue); color:white; border-radius:25px; cursor:pointer;  text-align:center; font-size:16px; display:block; padding: 15px 30px; display:inline-block; font-weight:700; }
 .btn:hover{background:white !important; color:black !important; cursor:pointer !important; }
 .opacite {opacity:0.35;}
-.titre{font-size:40px; margin:80px 0 40px 0; width:100%; text-align:center; font-weight:600; }
+.titre{font-size:35px; margin:80px 0 40px 0; width:100%; text-align:center; font-weight:600; }
 
 .derouler {background:rgb(40, 40, 42); margin-bottom:10px; border-radius:15px;}
 .derouler .top {display:flex; justify-content: space-between; align-items: center; padding:15px 0;  -webkit-user-select: none; -ms-user-select: none; user-select: none; }
@@ -40,7 +40,7 @@ select {cursor:pointer;}
   }
 
 /* menu ----------------------------------------------------- */
-#menu { z-index:1; width:100%; top:0; left:0; text-align:center; padding:15px 0; font-weight:600; }
+#menu { z-index:1; width:100%; top:0; left:0; text-align:center; padding:15px 0; font-weight:600; line-height:125%; }
 #menu div {display:inline-block; vertical-align:middle; margin:0 20px; }
 #menu img {display:inline-block; height:25px; vertical-align:middle; margin:0 20px;}
 #menu div:hover{opacity:0.8; cursor:pointer; }
@@ -80,7 +80,7 @@ select {cursor:pointer;}
 
 #siteweb #image {width:180px; display:inline-block; vertical-align:middle; margin:50px 0; }
 #siteweb .bloc {position:relative; display:inline-block; width:370px; margin:0 15px 30px 15px; border:solid 4px white; vertical-align:top; border-radius:20px; text-align:center;  }
-#siteweb .bloc .soustitre { margin:20px 0 30px 20px; width:200px; text-align:left; font-size:30px; font-weight:600; line-height:110%; }
+#siteweb .bloc .soustitre { margin:20px 0 30px 20px; width:200px; text-align:left; font-size:25px; font-weight:600; line-height:110%; }
 #siteweb .prix{position:absolute; top:3px; right:0; display:inline-block; margin:20px; text-align:right; font-size:20px; font-weight:600; }
 #siteweb ul{ margin:0 40px; padding:0; margin-right:20px; text-align:left;  }
 #siteweb li{margin:7px 0;}
