--- a/code/style.css
+++ b/code/style.css
@@ -13,7 +13,7 @@
 
 /* global ------------------------------------------------- */
 :root{background:black;}
-body,html{ background-color: var(--dark); /*background: linear-gradient(rgb(255, 210, 215) 80px, var(--dark) 250px) ;*/ color:white; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif; scroll-behavior: smooth; margin:0; padding:0; font-size:15px; font-weight:400; line-height:150%;   }
+body,html{ background-color: var(--dark); /*background: linear-gradient(rgb(255, 210, 215) 80px, var(--dark) 250px) ;*/ color:white; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif; scroll-behavior: smooth; margin:0; padding:0; font-size:15px; font-weight:500; line-height:150%;   }
 a{color:white; text-decoration:none; cursor:pointer; }
 a:hover {cursor:pointer !important;}
 /* input, select, textarea { -webkit-appearance: none; -moz-appearance: none; appearance: none; border:0; margin:0; padding:10px 15px; box-sizing: border-box; border-radius:10px; background:white; color: var(--dark); font-size:16px; } */
@@ -22,7 +22,7 @@ select {cursor:pointer;}
 .btn{ background:var(--blue); color:white; border-radius:25px; cursor:pointer;  text-align:center; font-size:16px; display:block; padding: 15px 30px; display:inline-block; font-weight:700; }
 .btn:hover{background:white !important; color:black !important; cursor:pointer !important; }
 .opacite {opacity:0.35;}
-.titre{font-size:32px; margin:80px 0 40px 0; width:100%; text-align:center; font-weight:700;  }
+.titre{font-size:32px; margin:80px 0 40px 0; width:100%; text-align:center; font-weight:700; line-height:125%; }
 
 .derouler {background:rgb(40, 40, 42); margin-bottom:10px; border-radius:15px;}
 .derouler .top {display:flex; justify-content: space-between; align-items: center; padding:15px 0;  -webkit-user-select: none; -ms-user-select: none; user-select: none; }
@@ -129,10 +129,10 @@ select {cursor:pointer;}
 
 /* dev ------------------------------------------------- */
 #dev {width:100%; text-align:center; }
-#dev .grandtitre { text-align:center; font-size:55px; width:570px; margin:100px auto 100px auto; text-shadow: rgba(0, 0, 0, 0.65) 0px 4px 14px;  }
+#dev .grandtitre { font-size:55px;  width:750px; text-align:center; margin:60px auto 80px auto; line-height:115%; font-family: "Lora";  }
 
 @media screen and (max-width: 700px) { 
-  #dev .grandtitre {width:80%; font-size:40px; margin:70px auto 40px auto; }
+  #dev .grandtitre {width:85%; font-size:35px; margin:40px auto 50px auto; }
   }
 
 
@@ -177,7 +177,7 @@ select {cursor:pointer;}
 
 /* texte ----------------------------------------------- */
 #texte {width:800px; margin-left:auto; margin-right:auto; text-align:left; }
-#texte .grandtitre {font-size:50px; text-align:left; padding:0; margin:90px 0 70px 0;  text-shadow: rgba(0, 0, 0, 0.65) 0px 4px 14px;}
+#texte .grandtitre {font-size:55px;  width:750px; text-align:left; padding:0; margin:90px 0 70px 0; line-height:115%; font-family: "Lora"; }
 #texte .titre {font-size:30px; text-align:left; padding:0; margin:70px 0 20px 0;  }
 #texte .texte {font-size:16px; text-align:left; padding:0; margin:15px 0;  }
 #texte a {border-bottom:solid 2px white;}
