--- a/code/style.css
+++ b/code/style.css
@@ -118,7 +118,7 @@ select {cursor:pointer;}
   .page .intro .grandtitre {font-size:40px; } 
   .page .section { padding:50px 10% 50px 10%; }
   .page .section .titre { font-size:30px;  }
-  .page .section .texte { text-align:left;  }
+  .page .section .texte { /* text-align:left; */  }
   .page .tarifs .bloc {width:90%; margin: 0 0 10% 0; }
   .page .tarifs .bloc .soustitre {width:55%; margin:5% 5% 30px 5%; }
   .page .tarifs .bloc .prix {width:30%; margin:5% 5% 30px 5%; }
