--- a/code/style.css
+++ b/code/style.css
@@ -116,9 +116,9 @@ select {cursor:pointer;}
 @media screen and (max-width: 750px) {
   .page .intro { padding:100px 10% 100px 10%;   }
   .page .intro .grandtitre {font-size:40px; } 
-  .page .section { padding:50px 10% 50px 10%; }
-  .page .section .titre { font-size:30px;  }
-  .page .section .texte { /* text-align:left; */  }
+  .page .section .texte {font-size:18px;}
+  .page .section, .page .portofolio, .page .tarifs { padding:50px 10% 50px 10%;  }
+  .page .section .titre,  .page .portofolio .titre, .page .tarifs .titre { font-size:30px;  }
   .page .tarifs .bloc {width:90%; margin: 0 0 10% 0; }
   .page .tarifs .bloc .soustitre {width:55%; margin:5% 5% 30px 5%; }
   .page .tarifs .bloc .prix {width:30%; margin:5% 5% 30px 5%; }
@@ -159,6 +159,8 @@ select {cursor:pointer;}
 
 @media screen and (max-width: 950px) { 
 #faq .derouler {width:90%; background:transparent;  margin:0; padding:10px 5%; }
+#faq {padding:50px 0;  }
+#faq .titre {font-size:30px; }
 
 }
 
