--- a/code/style.css
+++ b/code/style.css
@@ -15,7 +15,7 @@
 
 /* global ------------------------------------------------- */
 :root{background:black;}
-body,html{ background-color: black; color:white; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif; scroll-behavior: smooth; margin:0; padding:0; font-size:15px; font-weight:500; line-height:150%;   }
+body,html{ background-color: black; color:white; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif; scroll-behavior: smooth; margin:0; padding:0; font-size:16px; font-weight:500;   }
 a{color:white; text-decoration:none; cursor:pointer; }
 a:hover {cursor:pointer !important;}
 select {cursor:pointer;}
@@ -36,31 +36,32 @@ select {cursor:pointer;}
   }
 
 /* menu ----------------------------------------------------- */
-#menu { z-index:1; width:100%; top:0; left:0; text-align:center; font-weight:600; line-height:115%;  }
-#menu .menu {display:inline-block; vertical-align:middle; padding:15px 20px; cursor:pointer;  vertical-align:middle;}
+#menu { z-index:1; width:100%; top:0; left:0; text-align:center;   }
+#menu .menu {display:inline-block; vertical-align:middle; padding:15px 20px; cursor:pointer; vertical-align:middle; line-height:100%; }
 #menu #logo {display:inline-block; height:25px; vertical-align:middle; margin:0 20px;}
 #menu #globe {width:15px; padding-right:5px; vertical-align:middle;}
-#menu .sousmenu {position:absolute; top:47px; left:0; width:100%; z-index:3; background:var(--dark);  padding:30px 0; font-size:17px; }
+#menu .sousmenu {position:absolute; top:47px; left:0; width:100%; z-index:3; background:var(--dark);  padding:30px 0; }
 
-#sousmenuun a {width:180px; text-align:left; display:block; margin: 15px auto;  }
-#sousmenutrois a {width:80px; text-align:left; display:block; margin: 15px auto;  }
+#sousmenuun a {width:180px; text-align:left; display:block; margin: 10px auto;  }
+#sousmenutrois a {width:80px; text-align:left; display:block; margin: 10px auto;  }
 
 @media screen and (max-width: 600px) { 
   #menu .menu {padding:15px 15px;}
+  #menu .sousmenu {padding-left:30px;}
+  #sousmenuun a, #sousmenutrois a {font-size:30px; margin: 10px auto; width:auto; font-weight:700;}
   }
 
 
 /* page ------------------------------------------------- */
-.page .intro {/*width:60%;*/ padding:200px 20% 200px 20%; margin:0 0 0 0; text-align:center;  }
-.page .intro .grandtitre {font-size:55px; width:100%; margin-bottom:30px; line-height:115%; font-weight:700; text-align:center; /* text-shadow: rgba(0,0,0,0.5) 0 0 20px;*/ } 
-.page .intro .soustitre {font-size:20px; width:100%; margin-bottom:30px; line-height:150%; opacity:0.8; text-align:center;   }
-.page .btn {background:var(--blue); display:inline-block; border-radius:25px; font-size:15px; padding:10px 22px 11px 22px; margin:10px; line-height:100%;}
+.page .intro {padding:200px 0 200px 0; margin:0; text-align:center;  }
+.page .intro .grandtitre {width:700px; font-size:55px; font-weight:700; margin:0 auto 30px auto;  } 
+.page .intro .soustitre {width:700px; font-size:20px; line-height:140%; opacity:0.8; margin:0 auto 30px auto;   }
+.page .btn {background:var(--blue); display:inline-block; border-radius:25px; padding:10px 22px 11px 22px; margin:10px; line-height:100%;}
 .page .btn.blanc {background:transparent; border:solid 2px white; padding:9px 21px 10px 21px;  }
 
-.page .section { padding:100px 25% 100px 25%; font-size:20px; line-height:145%; text-align:center;  }
-.page .section .titre { text-align:center; padding:0; margin:0; margin-bottom:25px; font-size:40px; line-height:125%; font-weight:700; }
-.page .section .texte { text-align:center; padding:0; margin:0 0 25px 0;   opacity:0.65;  }
-.page .section ul { opacity:0.5;  }
+.page .section { padding:100px 0 100px 0; margin:0; text-align:center;   }
+.page .section .titre { width:700px; font-size:40px; line-height:125%; font-weight:700; margin:0 auto 25px auto; }
+.page .section .texte { width:700px; margin:0 auto 25px auto; font-size:20px; line-height:140%; opacity:0.65;  }
 
 .page .section.blanc {background:white; color:black; }
 .page .section.blanc .titre {font-weight:800; }
@@ -72,16 +73,16 @@ select {cursor:pointer;}
 
 .page .portofolio {padding:100px 0 100px 0; background:var(--dark);  }
 .page .portofolio .titre {text-align:center; padding:0; margin:0; margin-bottom:40px; font-size:40px; line-height:125%; font-weight:700; }
-.page .portofolio .images {position:relative; left:0; width:100%; padding:0 20px; overflow-x: auto; white-space: nowrap; box-sizing: border-box; scrollbar-width: none;}
+.page .portofolio .images {position:relative; left:0; width:100%; padding:0 10px; overflow-x: auto; white-space: nowrap; box-sizing: border-box; scrollbar-width: none;}
 .page .portofolio .images::-webkit-scrollbar {display: none; }
 .page .portofolio img {height:225px; width:auto; margin:0 10px; border-radius:10px; display: inline-block; }
 
 .page .tarifs {padding:100px 0 100px 0; background:var(--dark); text-align:center;}
 .page .tarifs .titre {text-align:center; padding:0; margin:0; margin-bottom:40px; font-size:40px; line-height:125%; font-weight:700; }
-.page .tarifs .bloc {position:relative; display:inline-block; width:370px; margin:0 15px 30px 15px; border:solid 4px white; vertical-align:top; border-radius:20px; text-align:center;  }
-.page .tarifs .bloc .soustitre { margin:20px 0 30px 20px; width:200px; text-align:left; font-size:24px; font-weight:700; line-height:110%; }
+.page .tarifs .bloc {position:relative; display:inline-block; width:370px; padding:0;  margin:0 15px 30px 15px; border:solid 4px white; vertical-align:top; border-radius:20px; text-align:center;  }
+.page .tarifs .bloc .soustitre { margin:20px 0 30px 20px; width:200px; text-align:left; font-size:24px; font-weight:700; line-height:125%; }
 .page .tarifs .prix{position:absolute; top:3px; right:0; display:inline-block; margin:20px; text-align:right; font-size:18px; font-weight:700; }
-.page .tarifs ul{ margin:0 40px; padding:0; margin-right:20px; font-weight:500; text-align:left;  }
+.page .tarifs ul{ margin:0 40px; padding:0; margin-right:20px; text-align:left;  line-height:130%; }
 .page .tarifs li{margin:7px 0;}
 .page .tarifs .cgv {margin:0 20px 20px 20px; font-size:12px; }
 .page .tarifs .cgv a {border-bottom:solid 2px white;}
@@ -115,11 +116,19 @@ select {cursor:pointer;}
 
 @media screen and (max-width: 750px) {
   .page .intro { padding:100px 10% 100px 10%;   }
-  .page .intro .grandtitre {font-size:40px; } 
-  .page .section .texte {font-size:18px;}
-  .page .section, .page .portofolio, .page .tarifs { padding:50px 10% 50px 10%;  }
-  .page .section .titre,  .page .portofolio .titre, .page .tarifs .titre { font-size:30px;  }
-  .page .tarifs .bloc {width:90%; margin: 0 0 10% 0; }
+  .page .intro .grandtitre {font-size:40px; width:auto; } 
+  .page .intro .soustitre {width:auto; }
+
+  .page .section { padding:50px 20px 50px 20px;  }
+  .page .section .titre { width:auto; font-size:30px; }
+  .page .section .texte {  text-align:left;  width:auto; font-size:16px; }
+
+  .page .portofolio { padding:50px 0 50px 0;  }
+.page .portofolio .titre { font-size:30px; }
+
+.page .tarifs { padding:50px 20px 50px 20px;  }
+.page .tarifs .titre { font-size:30px; }
+  .page .tarifs .bloc {width:auto; margin: 0 0 40px 0; display:block; }
   .page .tarifs .bloc .soustitre {width:55%; margin:5% 5% 30px 5%; }
   .page .tarifs .bloc .prix {width:30%; margin:5% 5% 30px 5%; }
 }
@@ -127,13 +136,13 @@ select {cursor:pointer;}
 
 /* accueil ---------------------------------------------------- */
 #accueil.intro {
-  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url('/img/accueil/intro.jpg') no-repeat center center;
+  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url('../img/accueil/intro.jpg') no-repeat center center;
   background-size: cover; 
 }
 
 /* app ---------------------------------------------------- */
 #app.intro {
-  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url('/img/app/intro.jpg') no-repeat center center;
+  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url('../img/app/intro.jpg') no-repeat center center;
   background-size: cover; 
 }
 
@@ -145,7 +154,7 @@ select {cursor:pointer;}
 
 /* siteweb ---------------------------------------------------- */
 #siteweb.intro {
-  background: linear-gradient(rgba(0, 0, 0, 0),  rgba(0, 0, 0, 0.5)), url('/img/siteweb/intro.jpg') no-repeat center center;
+  background: linear-gradient(rgba(0, 0, 0, 0),  rgba(0, 0, 0, 0.5)), url('../img/siteweb/intro.jpg') no-repeat center center;
   background-size: cover; 
 }
 
@@ -154,29 +163,35 @@ select {cursor:pointer;}
 #faq {padding:100px 0;  }
 #faq .titre {text-align:center; padding:0; margin:0; margin-bottom:30px; font-size:40px; line-height:125%; font-weight:700;}
 #faq .derouler {width:900px; border-bottom:solid rgb(50,50,50) 1px; margin-left:auto; margin-right:auto;}
-#faq .derouler .top {font-size:17px; padding:15px 0; font-weight:700;}
-#faq .derouler .contenu {padding:0 0 15px 0;}
+#faq .derouler .top {padding:15px 0; font-size:20px; line-height:140%;}
+#faq .derouler .contenu {padding:0 0 15px 0; line-height:155%; }
 
 @media screen and (max-width: 950px) { 
-#faq .derouler {width:90%; background:transparent;  margin:0; padding:10px 5%; }
+#faq .derouler {width:auto; background:transparent; padding:10px 20px; }
 #faq {padding:50px 0;  }
 #faq .titre {font-size:30px; }
-
 }
+
+@media screen and (max-width: 700px) { 
+  #faq .derouler .top { font-size:16px; line-height:150%;}
+  }
 
 
 /* footer ------------------------------------------------ */
 #footer{ width:100%; text-align:center;  }
 #footer a { margin: 0 20px; }
 #footer #copyright { width:100%; margin:20px 0; text-align:center;  font-size:12px;  }
-#footer .contact { /*width:60%;*/ padding:100px 10% 100px 10%; margin-bottom:30px; background: white; color:black; font-size:20px; line-height:145%;   }
-#footer .contact .titre { text-align:center; padding:0; margin:0; margin-bottom:25px; font-size:40px; line-height:125%; font-weight:800;  }
-#footer .contact .texte { text-align:center; padding:0; margin:0 0 50px 0;   opacity:0.65; }
+#footer .contact { padding:100px 0 100px 0; margin:0; text-align:center; margin-bottom:30px; background: white; color:black; line-height:145%;   }
+#footer .contact .titre { width:700px; font-size:40px; line-height:125%; font-weight:800; margin:0 auto 25px auto;  }
+#footer .contact .texte { width:700px; margin:0 auto 50px auto; font-size:20px; line-height:140%; opacity:0.65; }
 #footer .contact .bloc { display:inline-block; margin:0 35px; }
-#footer .contact .bloc .titre { font-size:28px; }
+#footer .contact .bloc .titre { width:auto; font-size:28px; }
 
 @media screen and (max-width: 750px) {
   #footer a { margin: 0 15px; }
+  #footer .contact { padding:50px 20px 50px 20px;  }
+  #footer .contact .titre { width:auto;  font-size:30px;}
+  #footer .contact .texte {  text-align:left;  width:auto; font-size:16px; }
   #footer .contact .bloc .titre { font-size:20px; }
 }
 
@@ -188,7 +203,7 @@ select {cursor:pointer;}
 #texte {width:800px; margin-left:auto; margin-right:auto; text-align:left; }
 #texte .grandtitre {font-size:55px;  width:750px; text-align:left; padding:0; margin:60px 0 0 0; line-height:115%; font-weight:700; }
 #texte .titre {font-size:30px; text-align:left; padding:0; margin:50px 0 20px 0;  }
-#texte .texte {font-size:16px; text-align:left; padding:0; margin:15px 0;  }
+#texte .texte {text-align:left; padding:0; margin:15px 0;  }
 #texte a {border-bottom:solid 2px white;}
 #texte a:hover {border-bottom:solid 2px transparent; cursor:pointer;}
 
